# ControlRox

./: .env.example  README.md  install.sh  pyproject.toml  start.bat
.github/: copilot-instructions.md
controlrox/: __init__.py  __main__.py  application.py
controlrox/applications/: __init__.py  app.py  constants.py  default.py  eplan.py  generator.py  gm.py  ladder.py  plcio.py  validator.py
controlrox/applications/ford/: __init__.py  ford.py  generator.py  matcher.py  validator.py
controlrox/applications/gm/: __init__.py  diagnostic_wrapper.py  generator.py  gm.py  matcher.py  tasks.py  validator.py
controlrox/applications/mod/: README.md  __init__.py  generate_modules.py  meta.py  validate_configs.py
controlrox/applications/test/: test_app.py
controlrox/interfaces/: __init__.py  constants.py
controlrox/interfaces/plc/: __init__.py  aoi.py  controller.py  datatype.py  dialect.py  generator.py  instruction.py  introspective.py  meta.py  module.py  operand.py  program.py  protocols.py  routine.py  rung.py  tag.py
controlrox/interfaces/tasks/: __init__.py  app.py
controlrox/models/: __init__.py
controlrox/models/eplan/: project.py
controlrox/models/gui/: __init__.py  ladder.py  plc.py  plc_bridge.py  plcio.py
controlrox/models/plc/: __init__.py  controller.py  datatype.py  meta.py  (+8 more)
controlrox/services/: __init__.py  checklist.py  eplan.py  l5x.py  plc_gui_introspection.py  simulation.py
controlrox/test/: test_app.py
docs/: _gm_controller.json  progress_service_guide.md
docs/controls/: _aoi.L5X  asdf.L5X  mytest.L5X  playtest.L5X  root.L5X
(+168 files in other folders)
