[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ControlRox"
version = "2.3.012"
authors = [
  { name="Brian LaFond", email="Brian.L.LaFond@gmail.com" },
]
description = "Python based ladder logic editor and toolset."
readme = "README.md"
requires-python = ">=3.13"
classifiers = [
  # How mature is this project? Common values are
  #   3 - Alpha
  #   4 - Beta
  #   5 - Production/Stable
  "Development Status :: 4 - Beta",

  # Indicate who your project is intended for
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Build Tools",

  # Pick your license as you wish (see also "license" above)
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",

  # Specify the Python versions you support here.
  "Programming Language :: Python :: 3.13",
]
dependencies = [
  "pyrox @ git+https://github.com/iroxusux/Pyrox.git@main",
  "debugpy",
  "pandoc",
  "pypandoc-binary",
  "pyyaml>=6.0",
  "jinja2>=3.1",
]

license = {file = "LICENSE"}
keywords = ["python", "tkinter", "api"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s | %(name)s | %(levelname)s | %(message)s"
log_cli_date_format = "%m/%d/%Y, %H:%M:%S"

[project.urls]
Homepage = "https://github.com/iroxusux/ControlRox"
Issues = "https://github.com/iroxusux/ControlRox/issues"